tests/fixtures/valid/ignored/builtins/format.py
# Valid format() calls
# Auto-generated by scripts/generate_tests.py

b0_format_int = format(1)
b1_format_float = format(1.0)
b2_format_bool = format(True)
b3_format_str = format("hello")
b4_format_bytes = format(b"hello")
b5_format_list = format([1, 2, 3])
b6_format_dict = format({"a": 1})
b7_format_set = format({1, 2, 3})
b8_format_none = format(None)

print("format() tests passed!")
